--- a/css/app.css
+++ b/css/app.css
@@ -1,1 +1,71 @@
+.flag, h1 {
+  transition: all 0.4s ease;
+}
 
+.flag .round {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+* {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+h1 {
+  background-color: red;
+  width: 100px;
+  height: 100px;
+}
+
+.flag {
+  width: 600px;
+  height: 400px;
+  background-color: green;
+  position: relative;
+}
+@media screen and (max-width: 992px) {
+  .flag {
+    width: 400px;
+    height: 250px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .flag {
+    width: 300px;
+    height: 180px;
+  }
+}
+.flag .round {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-color: red;
+}
+@media screen and (max-width: 992px) {
+  .flag .round {
+    width: 100px;
+    height: 100px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .flag .round {
+    width: 50px;
+    height: 50px;
+  }
+}
+.flag .stick {
+  width: 10px;
+}
