--- a/scss/utilities/_extends.scss
+++ b/scss/utilities/_extends.scss
@@ -9,3 +9,9 @@
     top: 50%;
     transform: translate(-50%, -50%);
 }
+
+.overlay {
+    background-color: rgba(34, 34, 34, 0.55);
+    width: 100%;
+    height: 100%;
+}
