--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -1,5 +1,11 @@
-$mobile:575px;
+//responsive breakpoints
+$mobile:576px;
 $mobile-horizontal:768px;
 $tablet:992px;
 $tablet-horizontal:1200px;
 $laptop:1400px;
+
+//color
+$blue:#0062cc;
+$orang:#fe813a;
+$sky-blue:#18bfc3;
