--- a/scss/layout/_banner.scss
+++ b/scss/layout/_banner.scss
@@ -1,22 +1,40 @@
-  
-.banner{
-    
-    &--demo{
+.banner {
+    &--demo {
         background: url('../images/common/welcome-bg.webp');
         background-repeat: no-repeat;
         background-position: top;
-        
     }
 
-    &__overlay{
+    &__overlay {
         @extend .overlay;
         padding: 250px 0 200px 0;
     }
 
-    
-    
-    
-    
+    @include responsive( $device: 576px ) {
+        @media screen and  ( max-width: $mobile ) {
+        .banner {
+            &__sub-title {
+                line-height: 26px;
+            }
+        }
 
-    
+
+        }
+    }
+
+    @include responsive( $device: 768px ) {
+        @media screen and  ( max-width: $mobile-horizontal ) {
+        .banner {
+            &__sub-title {
+                max-width: 450px;
+                margin: 0 auto;
+                line-height: 30px;
+                margin-bottom: 35px;
+            }
+        }
+
+
+        }
+    }
 }
+
