--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -4,3 +4,14 @@ $mobile_horizontal: 768px;
 $tablet: 992px;
 $tablet_horizontal: 1200px;
 $laptop: 1400px;
+
+
+$sky-blue-color: #18bfc3;
+$orange-color: #fe813a;
+$blue-color: #041d57;
+
+:root {
+    --sky-blue: #18bfc3;
+    --orange-color: #fe813a;
+    --blue-color: #041d57;;
+}
