--- a/css/app.css
+++ b/css/app.css
@@ -7907,7 +7907,7 @@ textarea.form-control-lg {
   font-family: var(--bs-font-monospace) !important;
 }
 
-.fs-1 {
+.fs-1, .banner__title {
   font-size: calc(1.375rem + 1.5vw) !important;
 }
 
@@ -7919,7 +7919,7 @@ textarea.form-control-lg {
   font-size: calc(1.3rem + 0.6vw) !important;
 }
 
-.fs-4 {
+.fs-4, .banner__description {
   font-size: calc(1.275rem + 0.3vw) !important;
 }
 
@@ -7947,11 +7947,11 @@ textarea.form-control-lg {
   font-weight: lighter !important;
 }
 
-.fw-normal {
+.fw-normal, .banner__description {
   font-weight: 400 !important;
 }
 
-.fw-bold {
+.fw-bold, .banner__title {
   font-weight: 700 !important;
 }
 
@@ -8263,7 +8263,7 @@ textarea.form-control-lg {
   border-radius: 50% !important;
 }
 
-.rounded-pill {
+.rounded-pill, .banner__group-btn a {
   border-radius: var(--bs-border-radius-pill) !important;
 }
 
@@ -10776,7 +10776,7 @@ textarea.form-control-lg {
   }
 }
 @media (min-width: 1200px) {
-  .fs-1 {
+  .fs-1, .banner__title {
     font-size: 2.5rem !important;
   }
   .fs-2 {
@@ -10785,7 +10785,7 @@ textarea.form-control-lg {
   .fs-3 {
     font-size: 1.75rem !important;
   }
-  .fs-4 {
+  .fs-4, .banner__description {
     font-size: 1.5rem !important;
   }
 }
@@ -10821,10 +10821,32 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+:root {
+  --sky-blue: #18bfc3;
+  --orange-color: #fe813a;
+  --blue-color: #041d57;
+}
+
+.btn-base:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before, .btn-base.has-border, .banner__group-btn a.has-border {
+  transition: all 0.4s ease;
+}
+
 .overlay {
   background-color: rgba(34, 34, 34, 0.55);
   width: 100%;
   height: 100%;
+}
+
+.no-underline, .banner__group-btn a {
+  text-decoration: none;
+}
+
+.inline-block, .banner__group-btn a {
+  display: inline-block;
+}
+
+.mb-3x, .banner__img, .banner__description, .banner__title {
+  margin-bottom: 30px;
 }
 
 * {
@@ -10842,6 +10864,51 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.btn-base, .banner__group-btn a {
+  text-transform: uppercase;
+  font-size: 12px;
+  font-weight: 700;
+}
+.btn-base.has-border, .banner__group-btn a.has-border {
+  border-width: 2px;
+  border-style: solid;
+  padding: 10px 34px;
+  background-color: transparent;
+  color: var(--background-color);
+  border-color: var(--background-color);
+}
+.btn-base.has-border:hover, .banner__group-btn a.has-border:hover {
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+.btn-base:not(.has-border), .banner__group-btn a:not(.has-border) {
+  padding: 12px 36px;
+  background-color: var(--background-color);
+  color: var(--text-color);
+  position: relative;
+  overflow: hidden;
+}
+.btn-base:not(.has-border) span, .banner__group-btn a:not(.has-border) span {
+  position: relative;
+  z-index: 2;
+}
+.btn-base:not(.has-border)::before, .banner__group-btn a:not(.has-border)::before {
+  content: "";
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  opacity: 0;
+  left: 50%;
+  z-index: 1;
+  transform: translateX(-50%);
+  background-color: var(--hover-background-color);
+}
+.btn-base:not(.has-border):hover:before, .banner__group-btn a:not(.has-border):hover:before {
+  width: 100%;
+  opacity: 1;
+}
+
 .banner {
   background-repeat: no-repeat;
   background-size: cover;
@@ -10850,5 +10917,15 @@ body {
   background-image: url(../images/common/welcome-bg.webp);
 }
 .banner--demo .overlay {
-  padding: 200px 0;
+  padding: 170px 0;
+}
+.banner__primary-btn {
+  --text-color: var(--bs-white);
+  --background-color: var(--sky-blue);
+  --hover-background-color: var(--blue-color);
+}
+.banner__secondary-btn {
+  --text-color: var(--bs-white);
+  --background-color: var(--orange-color);
+  --hover-background-color: var(--sky-blue);
 }
