--- a/scss/utilities/_extends.scss
+++ b/scss/utilities/_extends.scss
@@ -15,3 +15,15 @@
     width: 100%;
     height: 100%;
 }
+
+.no-underline {
+    text-decoration: none;
+}
+
+.inline-block {
+    display: inline-block;
+}
+
+.mb-3x {
+    margin-bottom: 30px;
+}
