--- a/scss/app.scss
+++ b/scss/app.scss
@@ -11,5 +11,11 @@
 
 //components
 @import './components/button';
+@import './components/section-heading';
+//layout
+@import './layout/hero';
+
 //pages
 @import './pages/demo';
+
+
