--- a/scss/components/_button.scss
+++ b/scss/components/_button.scss
@@ -1,19 +1,58 @@
-.primary-btn {
-    padding: 14px 39px;
-    background-color: $sky-blue;
-    @extend .default-transition;
+.btn-base {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 700;
     
-    &:hover {
-        background-color: $blue;
-    }
-}
+    &.has-border {
+        border: 2px;
+        border-style: solid;
+        padding: 10px 34px;
+        background-color: var(--background-color);
+        border-color: $white;
+        color: var(--text-color);
+        @extend .default-transition;
 
-.secondary-btn {
-    padding: 14px 39px;
-    background-color: $orang;
-    @extend .default-transition;
-
-    &:hover {
-        background-color: $sky-blue;
+        &:hover {
+            background-color: var(--background-hover-color);
+            color: var(--text-hover-color);
+        }
     }
+
+    &:not(.has-border) {
+        padding: var(--padding, 12px 36px);
+        background-color: var(--background-color);
+        color: var(--text-color);
+        position: relative;
+        overflow: hidden;
+    
+        span {
+            position: relative;
+            z-index: 2;
+        }
+
+        &::before {
+            content: '';
+            width:0%;
+            height: 100%;
+            position: absolute;
+            z-index: 1;
+            opacity: 0;
+            top: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            background-color: var(--background-hover-color);
+            @extend .default-transition;        
+        }
+        
+        &:hover {
+            color: var(--text-hover-color);
+        }
+    
+        &:hover:before {
+            width: 100%;
+            opacity: 1;
+        }
+    }
+
+    
 }
