--- a/scss/utilits/_extends.scss
+++ b/scss/utilits/_extends.scss
@@ -7,3 +7,11 @@
     width: 100%;
     height: 100%;
 }
+
+.no-underline{
+    text-decoration: none;
+}
+
+.inline-block{
+    display: inline-block;
+}
