--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -5,7 +5,19 @@ $tablet:992px;
 $tablet-horizontal:1200px;
 $laptop:1400px;
 
+
 //color
 $blue:#0062cc;
 $orang:#fe813a;
 $sky-blue:#18bfc3;
+$black:#222222;
+$purple-100:#592B86;
+$white:#ffffff;
+$gray-dark:#343a40;
+
+
+:root{
+    --orange-color:#fe813a;
+    --blue-color:#0062cc;
+    --sky-blue-color:#18bfc3;
+}
