--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,6 +14,8 @@
 @import './components/section-heading';
 //layout
 @import './layout/hero';
+@import './layout/laptop';
+@import './layout/site-footer';
 
 //pages
 @import './pages/demo';
