--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -1,10 +1,10 @@
 //responsive breakpoints
+$iphoneSE:375px;
 $mobile:575px;
 $mobile-horizontal:768px;
 $tablet:992px;
 $tablet-horizontal:1200px;
 $laptop:1400px;
-
 
 //color
 $blue:#0062cc;
@@ -14,7 +14,7 @@ $black:#222222;
 $purple-100:#592B86;
 $white:#ffffff;
 $gray-dark:#343a40;
-
+$gray-100:#424242;
 
 :root{
     --orange-color:#fe813a;
