--- a/scss/utilities/_variables.scss
+++ b/scss/utilities/_variables.scss
@@ -9,9 +9,13 @@ $laptop: 1400px;
 $sky-blue-color: #18bfc3;
 $orange-color: #fe813a;
 $blue-color: #041d57;
+$dark-color: #222222;
+$deep-purple: #592B86;
 
 :root {
     --sky-blue: #18bfc3;
     --orange-color: #fe813a;
-    --blue-color: #041d57;;
+    --blue-color: #041d57;
+    --dark-color: #222222;
+    --deep-purple: #592B86;
 }
