--- a/scss/utilits/_variable.scss
+++ b/scss/utilits/_variable.scss
@@ -13,8 +13,11 @@ $sky-blue:#18bfc3;
 $black:#222222;
 $purple-100:#592B86;
 $white:#ffffff;
+$dark-white:#F9F9F9;
 $gray-dark:#343a40;
 $gray-100:#424242;
+$gray-200:#626c84;
+$black-100:#041D57;
 
 :root{
     --orange-color:#fe813a;
