--- a/css/app.css
+++ b/css/app.css
@@ -19215,6 +19215,10 @@ readers do not read off random characters that represent icons */
   margin-left: 30px;
 }
 
+.w-full {
+  width: 100%;
+}
+
 .btn-base, .laptop__demo-content a, .hero__demo-content a, .banner__group-btn a {
   text-transform: uppercase;
   font-size: 12px;
@@ -19275,20 +19279,19 @@ readers do not read off random characters that represent icons */
   color: #592B86;
 }
 
-.banner--demo {
-  background: url("../images/common/welcome-bg.webp");
+.banner__item {
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: center top;
 }
-.banner--demo2 {
-  background: url("../images/common/slider_3.webp");
-  background-repeat: no-repeat;
-  background-position: center top;
+.banner__item--demo {
+  background-image: url("../images/common/welcome-bg.webp");
 }
-.banner--demo3 {
-  background: url("../images/common/slider_1.webp");
-  background-repeat: no-repeat;
-  background-position: center top;
+.banner__item--demo2 {
+  background-image: url("../images/common/slider_3.webp");
+}
+.banner__item--demo3 {
+  background-image: url("../images/common/slider_1.webp");
 }
 .banner__overlay {
   padding: 250px 0 200px 0;
@@ -19373,11 +19376,11 @@ readers do not read off random characters that represent icons */
   animation-delay: 1200ms;
 }
 .banner--home-1 .overlay {
-  min-height: 800px;
+  padding: 250px 0;
 }
 @media screen and (max-width: 1400px) {
   .banner--home-1 .overlay {
-    padding: 250px 0 100px 0;
+    padding: 180px 0 100px 0;
   }
 }
 .banner--home-1 .title {
@@ -19510,6 +19513,11 @@ readers do not read off random characters that represent icons */
   height: 2px;
   background-color: #18bfc3;
 }
+@media screen and (max-width: 375px) {
+  .waypoint__line-title::before {
+    display: none;
+  }
+}
 .waypoint__title {
   font-size: 52px;
   font-weight: 700;
@@ -19552,6 +19560,12 @@ readers do not read off random characters that represent icons */
 }
 .waypoint__list li:not(:last-child) {
   margin-right: 40px;
+}
+@media screen and (max-width: 375px) {
+  .waypoint__list li:not(:last-child) {
+    margin: 0;
+    margin-right: 5px;
+  }
 }
 .waypoint__list li p {
   position: relative;
