--- a/scss/layouts/_banner.scss
+++ b/scss/layouts/_banner.scss
@@ -1,43 +1,157 @@
 .banner {
-    background-repeat: no-repeat;
-    background-size: cover;
+    &__item {
+        background-size: cover;
+        background-repeat: no-repeat;
+        background-position:center top;
 
-    &--demo {
-        background-image: url(../images/common/welcome-bg.webp);
-        
-        .overlay {
-            padding: 170px 0;
+        &--demo {
+            background-image: url('../images/common/welcome-bg.webp');
+        }
+    
+        &--demo2 {
+            background-image: url('../images/common/slider_3.webp');
+        }
+    
+        &--demo3 {
+            background-image: url('../images/common/slider_1.webp');
+        }
+    }
+    
+    &__overlay {
+        @extend %banner-overlay;
+        padding: 250px 0 200px 0;
+        @include responsive( $mobile ) {
+            padding: 150px 0;
+        }
+
+        @include responsive( $tablet-horizontal, $mobile-horizontal ) {
+            padding: 150px 0;
         }
     }
 
-    &__title {
-        @extend .fw-bold, .fs-1, .mb-3x;
-    }
+    &__sub-title {
+        @include responsive( $tablet ) {
+            max-width: 450px;
+            margin: 0 auto;
+            line-height: 30px;
+            margin-bottom: 35px;
+        }
 
-    &__description {
-        @extend .fs-4, .fw-normal, .mb-3x;
-    }
-
-    &__img {
-        @extend .mb-3x;
+        @include responsive( $mobile ) {
+            line-height: 36px;
+        }
     }
 
     &__group-btn {
-        @extend .d-flex, .align-items-center, .gap-3, .justify-content-center;        
+        @extend .d-flex, .align-items-center, .gap-3, .justify-content-center;
         a {
-           @extend .no-underline, .inline-block, .rounded-pill, .btn-base;
+            @extend .no-underline, .inline-block, .btn-base, .rounded-pill;
+            @include responsive($iphoneSE) {
+                margin-top: 30px;
+            }
         }
+
+        @include responsive($iphoneSE) {
+           flex-direction: column;
+        }    
     }
 
     &__primary-btn {
         --text-color: var(--bs-white);
-        --background-color: var(--sky-blue);
-        --hover-background-color: var(--blue-color); 
+        --text-hover-color: var(--bs-white);
+        --background-color: var(--sky-blue-color);
+        --background-hover-color: var(--blue-color);    
     }
 
     &__secondary-btn {
         --text-color: var(--bs-white);
+        --text-hover-color: var(--bs-white);
         --background-color: var(--orange-color);
-        --hover-background-color: var(--sky-blue);
+        --background-hover-color: var(--sky-blue-color);
+    }
+
+    &__btn {
+        --text-color:var(--bs-white);
+        --text-hover-color: var(--bs-dark);
+        --background-hover-color:var(--bs-white);
+    }
+
+    &__nav {
+        @extend 
+            .position-absolute, .top-50, .start-0, 
+            .translate-middle-y, .d-flex, .justify-content-between,
+            .align-items-center, .w-100, %default-transition;
+
+        button {
+            @include equal-size(50px);
+            @extend .rounded-circle, .border, .border-0, %default-transition, .opacity-0;
+            background-color: $sky-blue;
+            color: var(--bs-white);
+            
+
+            &:hover {
+                background-color: $blue;
+            }
+        }
+    }
+
+    &:hover {
+        .banner__nav {
+            padding: 0 40px;
+
+             button {
+                @extend .opacity-100;
+             }
+        }
+    }
+
+     
+    .active {
+        .title,
+        .description,
+        .banner__btn,
+        .banner__primary-btn {
+            animation: animLeft 1s ease 100ms both;
+        }
+
+        .description {
+            animation-delay: 500ms;
+        }
+        
+        .banner__btn {
+            animation-delay: 800ms;
+        }
+
+        .banner__primary-btn {
+            animation-delay: 1200ms;
+        }
+    }
+            
+    &--home-1 {
+        .overlay {
+            @extend %banner-overlay;
+            padding: 250px 0;
+            @include responsive($laptop) {
+                padding: 180px 0 100px 0;
+            }
+
+            .container {
+                @extend %flex, %flex-column, %item-center, %justify-center;
+            }
+        }
+
+        .title {
+            font-size: 74px;
+            font-weight: 700;
+            @include responsive($tablet) {
+                font-size: 60px;
+            }
+        }
+
+        .description {
+            font-size: 20px;
+            font-weight: 600;
+        }
     }
 }
+
